# crom-agente-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  npm-publish.yml
docs/: publicacao-sdk-npm.md
go/: go.mod  go.sum
go/config/: config.go
go/sdk/: agent.go  client.go  client_test.go  sdk.go  sdk_test.go
mock-server/: Dockerfile  docker-compose.yml  package.json  server.js
python/: pyproject.toml
python/cromia_sdk/: client.py
python/docs/: conf.py  index.rst
python/tests/: test_client.py
rust/: Cargo.toml
rust/src/: lib.rs
typescript/: package-lock.json  package.json  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts
typescript/__tests__/: manager.test.ts
typescript/coverage/: coverage-final.json  index.html
typescript/coverage/src/: client.ts.html  index.html  index.ts.html  types.ts.html  utils.ts.html
typescript/coverage/tests/: index.html  test-cloud-models.js.html
typescript/docs/: hierarchy.html  index.html
typescript/docs/assets/: navigation.js  search.js
typescript/docs/classes/: CromClient.html
typescript/docs/functions/: isAgentEvent.html  isLegacyEvent.html  parseDaemonPayload.html
typescript/docs/interfaces/: AgentError.html  AgentEvent.html  CromClientOptions.html  ErrorEventData.html  FinishedEventData.html  IPCMessage.html  IPCResponse.html  LegacyMessageEvent.html  LegacyPermissionEvent.html  LegacyStatusEvent.html  MCPServerStatus.html  MessageEventData.html  ThinkingEventData.html  (+3 more)
typescript/src/: client.ts  index.ts  types.ts  utils.ts
typescript/tests/: test-cloud-models.js
(+46 files in other folders)
