[tool.poetry]
name = "cromia-sdk"
version = "0.1.0"
description = "SDK oficial em Python para integração com o ecossistema crom-agente"
authors = ["CromIA <mrj.crom@gmail.com>"]
readme = "README.md"
packages = [{include = "cromia_sdk"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
black = "^24.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
