[package]
name = "cromia-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK oficial em Rust para integração com o ecossistema crom-agente"
authors = ["CromIA <mrj.crom@gmail.com>"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.77"

[dev-dependencies]
tokio-test = "0.4.3"
